# src/routes/users.ts
@@ -2,7 +2,9 @@ import express from "express";
 
 import { createUserProfileHandler } from "../controllers/userProfileController";
 import {
+	getUserCurrentSubscriptionHandler,
 	getUserPlanHandler,
+	listUserSubscriptionsHandler,
 	setUserPlanHandler,
 } from "../controllers/subscriptionController";
 import { getUserQuotaHandler } from "../controllers/quotaController";
@@ -12,6 +14,10 @@ const router = express.Router();
 router.post("/", createUserProfileHandler);
 router.get("/:userId/plan", getUserPlanHandler);
 router.put("/:userId/plan", setUserPlanHandler);
+
+router.get("/:userId/subscriptions", listUserSubscriptionsHandler);
+router.get("/:userId/subscriptions/current", getUserCurrentSubscriptionHandler);
+
 router.get("/:userId/quota", getUserQuotaHandler);
 
 export default router;
